--- a/src/app/pokemons/list-pokemon/list-pokemon.component.html
+++ b/src/app/pokemons/list-pokemon/list-pokemon.component.html
@@ -5,15 +5,15 @@
     <app-search-pokemon></app-search-pokemon>
 
     <div *ngFor='let pokemon of pokemons' class="col s6 m4">
-      <div class="card horizontal" (click)=selectPokemon(pokemon) appBorderCard>
+      <div class="card horizontal" appBorderCard>
         <div class="card-image">
-          <img [src]="pokemon.picture" alt="Picture of the Pokemon">
+          <img [src]="pokemon.sprites.front_default" alt="pokemon.name">
         </div>
         <div class="card-stacked">
           <div class="card-content">
-            <p>{{ pokemon.name }}</p>
-            <p><small>{{ pokemon.created | date:'dd/MM/yyyy' }}</small></p>
-            <span *ngFor='let type of pokemon.types' class='{{ type | pokemonTypeColor }}'> {{ type }}</span>
+            <p><strong>#{{ pokemon.id }}</strong></p>
+            <p>{{ pokemon.name | uppercase }}</p>
+            <span *ngFor='let type of pokemon.types' class='{{ type | pokemonTypeColor }}'>{{ pokemon.types }}</span>
           </div>
         </div>
       </div>
