--- a/src/app/pokemons/pokemon-form/pokemon-form.component.html
+++ b/src/app/pokemons/pokemon-form/pokemon-form.component.html
@@ -1,9 +1,9 @@
-<form *ngIf="pokemon" (ngSubmit)="onSubmit()" #pokemonForm="ngForm">
+<!-- <form *ngIf="pokemon" (ngSubmit)="onSubmit()" #pokemonForm="ngForm">
   <div class="row">
     <div class="col s8 offset-s2">
       <div class="card-panel">
 
-        <!-- Pokemon name -->
+
         <div class="form-group">
           <label for="name">Nom</label>
           <input type="text" class="form-control" id="name" required pattern="^[a-zA-Z0-9àéèç]{1,25}$"
@@ -14,7 +14,7 @@
           </div>
         </div>
 
-        <!-- Pokemon hp -->
+
         <div class="form-group">
           <label for="hp">Point de vie</label>
           <input type="number" class="form-control" id="hp" required pattern="^[0-9]{1,3}$" [(ngModel)]="pokemon.hp"
@@ -24,7 +24,7 @@
           </div>
         </div>
 
-        <!-- Pokemon cp -->
+
         <div class="form-group">
           <label for="cp">Dégâts</label>
           <input type="number" class="form-control" id="cp" required pattern="^[0-9]{1,2}$" [(ngModel)]="pokemon.cp"
@@ -34,7 +34,7 @@
           </div>
         </div>
 
-        <!-- Pokemon types -->
+
         <form class="form-group">
           <label for="types">Types</label>
           <p *ngFor="let type of types">
@@ -50,7 +50,7 @@
           </p>
         </form>
 
-        <!-- Submit button -->
+
         <div class="divider"></div>
         <div class="section center">
           <button type="submit" class="waves-effect waves-light btn" [disabled]="!pokemonForm.form.valid">
@@ -61,7 +61,7 @@
     </div>
   </div>
 </form>
-<!-- <h4 *ngIf="!pokemon" class="center">Aucun pokémon à afficher !</h4> -->
+
 <h4 *ngIf="!pokemon" class="center">
   <app-loader-pokemon></app-loader-pokemon>
-</h4>
+</h4> -->
