--- a/src/app/pokemons/list-pokemon/list-pokemon.component.html
+++ b/src/app/pokemons/list-pokemon/list-pokemon.component.html
@@ -5,7 +5,7 @@
     <app-search-pokemon></app-search-pokemon>
 
     <div *ngFor='let pokemon of pokemons' class="col s6 m4">
-      <div class="card horizontal" (click)=selectPokemon(pokemon) appBorderCard>
+      <div class="card horizontal" (click)=onselectPokemon(pokemon) appBorderCard>
         <div class="card-image">
           <img [src]="pokemon.sprites.front_default" alt="pokemon.name">
         </div>
@@ -13,7 +13,8 @@
           <div class="card-content">
             <p><strong>#{{ pokemon.id }}</strong></p>
             <p>{{ pokemon.name | uppercase }}</p>
-            <span *ngFor='let type of pokemon.types' class='{{ type | pokemonTypeColor }}'>{{ pokemon.types }}</span>
+            <!-- <span *ngFor='let type of pokemon.types' class='{{ type | pokemonTypeColor }}'>{{ pokemon.types }}</span> -->
+            <span *ngFor="let type of pokemon.types" class="{{ type | pokemonTypeColor }}">{{ type }}</span>
           </div>
         </div>
       </div>
