--- a/src/app/pokemons/list-pokemon/list-pokemon.component.html
+++ b/src/app/pokemons/list-pokemon/list-pokemon.component.html
@@ -4,7 +4,7 @@
 
     <app-search-pokemon></app-search-pokemon>
 
-    <div *ngFor='let pokemon of pokemons' class="col s6 m4">
+    <div *ngFor="let pokemon of pokemons |paginate: { itemsPerPage: 50, currentPage: p}" class="col s6 m4">
       <div class="card horizontal" (click)=onselectPokemon(pokemon) appBorderCard>
         <div class="card-image">
           <img [src]="pokemon.sprites.front_default" alt="pokemon.name">
@@ -21,3 +21,5 @@
     </div>
   </div>
 </div>
+
+<pagination-controls (pageChange)="p=$event"></pagination-controls>
