--- a/src/app/pokemons/list-pokemon/list-pokemon.component.css
+++ b/src/app/pokemons/list-pokemon/list-pokemon.component.css
@@ -1,6 +1,9 @@
 .title {
   margin: 50px;
   font-size: 3rem;
+  font-family: 'Fredoka One',
+    cursive;
+  border-radius: 4px;
 }
 
 .card:hover {
