--- a/src/app/pokemons/list-pokemon/list-pokemon.component.html
+++ b/src/app/pokemons/list-pokemon/list-pokemon.component.html
@@ -1,4 +1,4 @@
-<div class="center title">{{ title }}</div>
+<div class=" card center title">{{ title | uppercase }}</div>
 <div class="container">
   <div class="row">
 
