Addition of new info in description card / clean code / Addition of comments

--- a/src/app/pokemons/detail-pokemon/detail-pokemon.component.css
+++ b/src/app/pokemons/detail-pokemon/detail-pokemon.component.css
@@ -18,6 +18,6 @@
   color: #6600ff;
 }
 
-/* tr:nth-child(even) {
-  background-color: #f2f2f2 !important;
-} */
+td.centered {
+  text-align: center !important;
+}
