--- a/src/app/pokemons/detail-pokemon/detail-pokemon.component.html
+++ b/src/app/pokemons/detail-pokemon/detail-pokemon.component.html
@@ -35,10 +35,6 @@
                 <td>Habitat</td>
                 <td class="centered"><em>{{ selectedPokemon.habitat | uppercase}}</em></td>
               </tr>
-              <!-- <tr>
-                <td>Fun Fact</td>
-                <td><em>{{ selectedPokemon.flavour_text_entries }}</em></td>
-              </tr> -->
               <tr>
                 <td>Evolves from</td>
                 <td class="centered">
@@ -47,8 +43,8 @@
               <tr>
                 <td>Evolves to</td>
                 <td class="centered">
-                  <a class="evolution" (click)="onselectEvoForm(selectedPokemon)"
-                    routerLink="/pokemon/:id">{{ selectedPokemon.evolutionName | uppercase }}</a>
+                  <a class="evolution"
+                    [routerLink]="['/pokemon', evolvedPokemon.id]">{{ selectedPokemon.evolutionName | uppercase }}</a>
                 </td>
               </tr>
               <tr>
