--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <nav>
   <div class="nav-wrapper deep-purple accent-3">
-    <a class="brand-logo center">
+    <a routerLink="/pokemons" class="brand-logo center">
       <img src="../assets/img/pokemon_logo.png" width="150" height="auto" alt="Pokemon logo">
     </a>
   </div>
