Addition of comments / clean code / style modification

--- a/src/app/page-not-found/page-not-found.component.html
+++ b/src/app/page-not-found/page-not-found.component.html
@@ -3,6 +3,6 @@
   <h1>Oh no! Page not found.</h1>
   <!-- directive routerLink -->
   <a routerLink="/pokemons" class="waves-effect waves-teal btn-flat">
-    Home
+    Pokedex
   </a>
 </div>
