--- a/src/app/pokemons/list-pokemon/list-pokemon.component.css
+++ b/src/app/pokemons/list-pokemon/list-pokemon.component.css
@@ -6,9 +6,16 @@
   border-radius: 4px;
 }
 
-.card:hover {
+/* Card height */
+.horizontal {
+  height: 180px;
+}
+
+.horizontal:hover {
   cursor: pointer;
-  border-color: #6600ff !important;
+  border: 4px solid #6600ff;
+  background: black;
+  color: white;
 }
 
 pagination-controls {
